[gd_scene load_steps=4 format=3 uid="uid://dlo408el6udps"]

[ext_resource type="Script" path="res://scenes/game over/game_over.gd" id="1_2d087"]
[ext_resource type="LabelSettings" uid="uid://ckdb3x2kpglf6" path="res://assets/score_48.tres" id="1_w7ucj"]
[ext_resource type="AudioStream" uid="uid://dyrkrmbrodr4d" path="res://assets/audio/game_over.wav" id="3_kp4fa"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2d087")

[node name="GameOver" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_w7ucj")

[node name="Space" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_w7ucj")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kp4fa")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
